Bean and annotations